# redash_pandas

./: .gitignore  CLAUDE.md  README.md  __init__.py  example.py  pyproject.toml  setup.py
credentials/: example.secrets.json
redash_pandas/: __init__.py  redash.py
src/: __init__.py  redash.py
